--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@shoaibfarooq3/api-plugin-emails-custom",
-  "description": "Boilerplate Example plugin for the Reaction API",
-  "label": "Example Plugin",
-  "version": "2.0.1-development",
+  "description": "Boilerplate Email Custom plugin for the Reaction API",
+  "label": "Email Custom",
+  "version": "2.0.2-development",
   "main": "index.js",
   "type": "module",
   "engines": {
